--- a/css/style.css
+++ b/css/style.css
@@ -430,34 +430,31 @@ img {
   font-size: 18px;
   line-height: 24px;
   color: var(--white);
-  padding: 8px 16px 7px 19px;
-  padding-right: 23px;
+  box-sizing: border-box;
+  text-align: center;
 }
 .header-btn-bookmarks {
   position: relative;
-  padding-left: 19px;
-  padding-top: 7px;
-  padding-right: 52px;
-  padding-bottom: 8px;
+  width: 155px;
+  padding-top: 9px;
+  /*padding-left: 35px;*/
+  padding-bottom: 6px;
 }
 
 .header-btn-bookmarks.catalog {
-  padding-right: 39px;
+  margin-left: 7px;
 }
 
-.header-btn-bookmarks svg {
-  padding-top: 5px;
-  padding-right: 9px;
-}
-
-.header-btn-bookmarks:hover svg g,
-.header-btn-bookmarks:focus-within svg g {
-  opacity: 1;
-}
-
-.header-btn-bookmarks:hover,
-.header-btn-bookmarks:focus-within {
-  opacity: 1;
+.header-btn-bookmarks::before {
+  content: "";
+  position: absolute;
+  background-repeat: no-repeat;
+  width: 15px;
+  height: 15px;
+  background-image: url("../img/icon-bookmark.svg");
+  left: 12px;
+  top: 13px;
+  opacity: 0.3;
 }
 
 .header-btn-cart-full {
@@ -467,8 +464,13 @@ img {
   font-size: 18px;
   line-height: 24px;
   color: var(--white);
+  width: 136px;
   background-color: var(--amaranth);
-  padding: 9px 20px 9px 35px;
+  box-sizing: border-box;
+  padding-top: 9px;
+  padding-bottom: 9px;
+  padding-left: 20px;
+  /*padding: 9px 20px 9px 35px;*/
   position: relative;
 }
 
@@ -486,8 +488,10 @@ img {
 
 .header-btn-cart {
   position: relative;
-  padding: 10px 28px 5px 2px;
-  padding-left: 20px;
+  width: 137px;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-bottom: 5px;
 }
 
 .header-btn-cart::before {
@@ -497,7 +501,7 @@ img {
   width: 15px;
   height: 15px;
   background-image: url("../img/icon-cart.svg");
-  left: -1px;
+  left: 12px;
   top: 13px;
   opacity: 0.3;
 }
@@ -517,9 +521,11 @@ img {
 
 .header-btn-order {
   background-color: var(--apple);
+  width: 150px;
+  padding-left: 5px;
+  padding-right: 5px;
   padding-top: 9px;
   padding-bottom: 6px;
-  padding-right: 17px;
 }
 
 .header-btn-order:hover,
@@ -1304,7 +1310,7 @@ img {
   left: 40px;
 }
 
-.item-new::before {
+.new::before {
   position: absolute;
   content: "new";
   transform: rotate(45deg);
